<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scenario_simulator_v2_scenarios</name>
  <version>0.0.0</version>
  <description>Scenarios for regression testing of scenario_simulator_v2</description>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
